--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 #header {
+  height: 105px;
   width: 100%;
   padding: 10px;
   background-color: rgba(0, 0, 0, 0);
@@ -29,8 +30,16 @@ body {
   position: fixed;
 }
 
+#header.scrolled {
+  background-color: #006666 !important;
+  color: #fafafa;
+  opacity: 0.9;
+  transition: all ease-in 150ms;
+}
+
 #header-img {
   height: 50px;
+  margin-top: -10px;
   transition: all ease-in 200ms
 }
 
@@ -49,7 +58,7 @@ body {
   font-size: 18px;
   letter-spacing: 1px;
   display: inline-block;
-  margin: 10px 15px;
+  margin: 0px 15px;
   transition: all ease-in 200ms;
 }
 
@@ -91,7 +100,7 @@ body {
 }
 
 .tiny-subheading {
-  opacity: 0.75;
+  opacity: 0.85;
 }
 
 .scroll-div {
@@ -164,8 +173,12 @@ body {
 }
 
 #tech-sec {
-  margin-top: 5em;
+  margin-top: 4em;
   color: #006666;
+}
+
+.p2p {
+  margin-top: 3em;
 }
 
 .tech-img {
@@ -178,8 +191,8 @@ body {
 }
 
 .mid-row {
-  margin-top: 3em;
-  margin-bottom: 2em;
+  margin-top: 5em;
+  margin-bottom: 4em;
 }
 
 #middle-p {
@@ -187,5 +200,83 @@ body {
 }
 
 #data-icon {
+  margin-top: 17.5px;
   height: 100px;
+}
+
+#form {
+  margin: auto;
+}
+
+.form-input {
+  padding: 5px;
+  color: #303030;
+  width: 400px;
+  font-size: 24px;
+  display: block;
+  margin: 0 auto 25px;
+  border: 2px solid #006666;
+  border-radius: 5px;
+}
+
+.form-input:focus {
+  outline-width: 0;
+}
+
+#submit {
+  background-color: #fafafa;
+  opacity: 1;
+  font-weight: bold;
+  color: #006666;
+  transition: all ease-in 150ms;
+}
+
+#submit:hover {
+  color: #fafafa;
+  background-color: #006666;
+}
+
+#message {
+  height: 150px;
+  min-width: 400px;
+  max-width: 400px;
+  min-height: 150px;
+  max-height: 350px;
+}
+
+#contact-sec {
+  margin-top: 4em;
+  color: #006666;
+}
+
+#footer {
+  background-color: #006666;
+  height: 100px;
+  margin-top: 50px;
+  position: relative;
+  width: 100%;
+}
+
+.made {
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 5px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.coffee, .heart {
+  margin-bottom: -6px;
+}
+
+.made-link {
+  color: #fafafa;
+  transition: all ease-in 150ms;
+}
+
+.made-link:hover {
+  text-decoration: none;
+  color: #303030;
 }
